// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept valid events only 1`] = `"Invalid stream event "done""`;

exports[`should accept valid events only 2`] = `"Invalid stream event "value""`;

exports[`should ignore comments 1`] = `
[
  {
    "data": {
      "iAm": "data",
    },
    "event": "next",
  },
]
`;

exports[`should parse chunked message 1`] = `
[
  {
    "data": {
      "iAm": "data",
    },
    "event": "next",
  },
]
`;

exports[`should parse message whose lines are separated by \\r\\n 1`] = `
[
  {
    "data": {
      "iAm": "data",
    },
    "event": "next",
  },
]
`;

exports[`should parse message with prepended ping 1`] = `
[
  {
    "data": {
      "iAm": "data",
    },
    "event": "next",
  },
]
`;

exports[`should parse multiple messages from one chunk 1`] = `
[
  {
    "data": {},
    "event": "next",
  },
  {
    "data": {
      "no": "data",
    },
    "event": "next",
  },
]
`;

exports[`should parse multiple messages from one chunk 2`] = `
[
  {
    "data": {
      "almost": "done",
    },
    "event": "next",
  },
  {
    "data": {},
    "event": "complete",
  },
]
`;

exports[`should parse whole message 1`] = `
[
  {
    "data": {
      "iAm": "data",
    },
    "event": "next",
  },
]
`;

exports[`should parse whole message 2`] = `
[
  {
    "data": {
      "iAm": "data",
    },
    "event": "next",
  },
]
`;

exports[`should parse whole message 3`] = `
[
  {
    "data": null,
    "event": "complete",
  },
]
`;
